--- a/page1/index.html
+++ b/page1/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS links -->
-    <link rel="stylesheet" href="/src/css-init/index.css">
-    <link rel="stylesheet" href="/src/css-init/reset.css"> 
-    <link rel="stylesheet" href="/src/css-init/animation-glitch.css">
-    <link rel="stylesheet" href="/src/css-init/init-responsive.css">
+    <link rel="stylesheet" href="/page1/src/css-init/animation-glitch.css">
+   <link rel="stylesheet" href="/page1/src/css-init/index.css">
+   <link rel="stylesheet" href="/page1/src/css-init/init-responsive.css">
+   <link rel="stylesheet" href="/page1/src/css-init/reset.css">
 
     <!-- AOS Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
@@ -28,7 +28,7 @@
     <header class="head">
         <nav class="nav-bar">
             <a href="index.html">
-                <img src="/src/img/miaum.jpg" alt="Logo da Empresa" class="img-cat logo">
+                <img src="./src/img/miaum.jpg" alt="Logo da Empresa" class="img-cat logo">
             </a>
     
             <!-- Ícone de três pontinhos (agora com três divs para as linhas) -->
@@ -161,7 +161,7 @@
     
 
     </script>
-    <script src="/./src/js-init/index.js"></script>
+    <script src="/page1/src/js-init/index.js"></script>
     <script src="./src/js-init/glitch.js"></script>
 </body>
 </html>
