--- a/src-login/login.html
+++ b/src-login/login.html
@@ -7,6 +7,7 @@
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="./css-login/loginRes.css">
 
  <link rel="stylesheet" href="/src-login/css-login/login.css">
   
@@ -41,9 +42,9 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="email" placeholder="Email">
+                <input type="email" placeholder="Email" pattern=".+@example\.com">
                 <input type="password" placeholder="Password">
-                <a href="#">Forget Your Password?</a>
+                <a href="/src-login/./recover.html">Forget Your Password?</a>
                 <button>Sign In</button>
             </form>
         </div>
